tests/ui/feature-gates/feature-gate-simd.stderr
error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/feature-gate-simd.rs:1:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = note: see issue #27731 <https://github.com/rust-lang/rust/issues/27731> for more information
   = help: add `#![feature(repr_simd)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
